tests cleanup, syntactic sugar in JobModuleExtender to load johs collection in 1 line